--- a/problems/baekjoon/19532.md
+++ b/problems/baekjoon/19532.md
@@ -15,7 +15,7 @@ int e = Integer.parseInt(st.nextToken());
 int f = Integer.parseInt(st.nextToken());
 ```
 
-### 📇 Logic / Output
+### 💡 Logic / 📇 Output
 
 ```java
 for (int x = -999; x < 1000; x++) {
